Bug 504571 - Disabling "Show in history" for an app unexpectedly prevents it from participating in the DND summary system
Summary: Disabling "Show in history" for an app unexpectedly prevents it from particip...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.3.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 502422 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-20 14:59 UTC by Nate Graham
Modified: 2025-07-26 11:29 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-05-20 14:59:19 UTC
SUMMARY
With current git master, when you make an app's notifications not appear in the history, it also doesn't participate in the "you missed X notifications while in DND mode" system, which is unexpected and not ideal.


STEPS TO REPRODUCE
1. System Settings > Notifications > Application settings > Dolphin > Uncheck "Show in history"
2. Open a web browser tab with a YouTube video, and play it, but don't enter full screen
3. run `sleep 5 && notify-send --hint=string:desktop-entry:org.kde.dolphin "hi"`
4. Enter full screen in the YouTube video
5. wait 10 seconds
6. Leave full screen


OBSERVED RESULT
The fake notification from Dolphin is on screen.


EXPECTED RESULT
The fake notification from Dolphin is in the history, and I see a "You missed 1 notification" message.


ADDITIONAL INFORMATION
Technically it's doing what you asked it to, but you probably didn't realize this specific implication. Perhaps notifications marked as not going into the history should in fact go there if they were missed while in DND mode, or else they're simply lost forever.
Comment 1 Nate Graham 2025-05-20 19:03:53 UTC
As for why one would want to do this: I have notifications for all my chat apps set to not appear in history because I find it difficult to read long chains of notifications in the history popup. I like to see notifications in pop-up form so I can keep track of who's saying what in real-time, but I don't need it to be recorded for posterity.

But if I missed those notifications due to being in DND mode, then it would be useful to see what I missed in the history, where it's at least better than nothing.
Comment 2 TraceyC 2025-05-20 19:17:48 UTC
Confirm this on git-master. Further frustrations:

- If I trigger DND with the toggle inthe notification drop down
- Then trigger the fake Dolphin notification
- I don't see the notification pop-up (as expected)
- I then turn off DND with the toggle
- I see a notification that there was 1 notification during DND. There's nothing to indicate what that notification was or what app triggered it. 

Adding the missed notification to history, as suggested, would solve this problem
Comment 3 Bug Janitor Service 2025-05-30 08:08:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5540
Comment 4 Nate Graham 2025-06-03 22:49:23 UTC
*** Bug 502422 has been marked as a duplicate of this bug. ***
Comment 5 Niccolò Venerandi 2025-07-24 07:26:32 UTC
Git commit f505b6eed5a864729c32d74fc1a597d9db6cc36e by Niccolò Venerandi.
Committed on 24/07/2025 at 07:25.
Pushed by niccolove into branch 'master'.

Force keep notifications in history if they were triggered in DnD

Otherwise, there might be no way to retrieve them after
DnD is turned off.

M  +1    -0    applets/notifications/package/contents/ui/main.qml
M  +19   -3    libnotificationmanager/notificationfilterproxymodel.cpp
M  +5    -0    libnotificationmanager/notificationfilterproxymodel_p.h
M  +14   -16   libnotificationmanager/notifications.cpp
M  +14   -0    libnotificationmanager/notifications.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/f505b6eed5a864729c32d74fc1a597d9db6cc36e
Comment 6 Niccolò Venerandi 2025-07-24 07:26:55 UTC
Git commit 6753834a17811324493450cb8dc0c47be618b89d by Niccolò Venerandi.
Committed on 24/07/2025 at 07:26.
Pushed by niccolove into branch 'Plasma/6.4'.

Force keep notifications in history if they were triggered in DnD

Otherwise, there might be no way to retrieve them after
DnD is turned off.


(cherry picked from commit f505b6eed5a864729c32d74fc1a597d9db6cc36e)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +1    -0    applets/notifications/package/contents/ui/main.qml
M  +19   -3    libnotificationmanager/notificationfilterproxymodel.cpp
M  +5    -0    libnotificationmanager/notificationfilterproxymodel_p.h
M  +14   -16   libnotificationmanager/notifications.cpp
M  +14   -0    libnotificationmanager/notifications.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/6753834a17811324493450cb8dc0c47be618b89d