Force keep notifications in history if they were triggered in DnD

Otherwise, there might be no way to retrieve them after
DnD is turned off.

BUG:504571